add Hazelcast dependency to indexing service